--- a/dobutsu_shogi/index.html
+++ b/dobutsu_shogi/index.html
@@ -13,33 +13,39 @@
 			<p class="result" id="result"></p>
 		</div>
 		<div class="container">
+			<div class="opponent" id="opponent">
+				<h6>Opponent</h6>
+			</div>
 			<div class="board">
 				<table id="table">
 					<tr>
-						<td id="1"></td>
-						<td id="2"></td>
-						<td id="3"></td>
+						<td id="1" class="cell"></td>
+						<td id="2" class="cell"></td>
+						<td id="3" class="cell"></td>
 					</tr>
 					<tr>
-						<td id="4"></td>
-						<td id="5"></td>
-						<td id="6"></td>
+						<td id="4" class="cell"></td>
+						<td id="5" class="cell"></td>
+						<td id="6" class="cell"></td>
 					</tr>
 					<tr>
-						<td id="7"></td>
-						<td id="8"></td>
-						<td id="9"></td>
+						<td id="7" class="cell"></td>
+						<td id="8" class="cell"></td>
+						<td id="9" class="cell"></td>
 					</tr>
 					<tr>
-						<td id="10"></td>
-						<td id="11"></td>
-						<td id="12"></td>
+						<td id="10" class="cell"></td>
+						<td id="11" class="cell"></td>
+						<td id="12" class="cell"></td>
 					</tr>
 				</table>
 			</div>
+			<div class="player" id="player">
+				<h6>Player</h6>
+			</div>
 
 			<div class="output">
-				<textarea id="output"></textarea>
+				<textarea id="output" readonly></textarea>
 			</div>
 		</div>
 
