--- a/dobutsu_shogi/index.html
+++ b/dobutsu_shogi/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Dobutsu Shogi</title>
 		<link rel="stylesheet" type="text/css" href="static/css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script type="text/javascript" src="static/script/jquery.min.js"></script>
 		<script type="text/javascript" src="static/script/game.js"></script>
 	</head>
 	<body>
