updated layout and style

--- a/dobutsu_shogi/index.html
+++ b/dobutsu_shogi/index.html
@@ -13,11 +13,20 @@
 			<p class="result" id="result"></p>
 		</div>
 		<div class="container">
+
 			<div class="opponent" id="opponent">
 				<h6>Opponent</h6>
+				<table id="opponent_bench" class="opponent_bench">
+					<tr><td id="o_1" class="bench_cell"></td></tr>
+					<tr><td id="o_2" class="bench_cell"></td></tr>
+					<tr><td id="o_3" class="bench_cell"></td></tr>
+					<tr><td id="o_4" class="bench_cell"></td></tr>
+					<tr><td id="o_5" class="bench_cell"></td></tr>
+				</table>
 			</div>
+
 			<div class="board">
-				<table id="table">
+				<table id="table" class="table">
 					<tr>
 						<td id="1" class="cell"></td>
 						<td id="2" class="cell"></td>
@@ -40,8 +49,16 @@
 					</tr>
 				</table>
 			</div>
+			
 			<div class="player" id="player">
 				<h6>Player</h6>
+				<table id="player_bench" class="player_bench">
+					<tr><td id="p_1" class="bench_cell"></td></tr>
+					<tr><td id="p_2" class="bench_cell"></td></tr>
+					<tr><td id="p_3" class="bench_cell"></td></tr>
+					<tr><td id="p_4" class="bench_cell"></td></tr>
+					<tr><td id="p_5" class="bench_cell"></td></tr>
+				</table>
 			</div>
 
 			<div class="output">
